fix spacing

--- a/wp-content/themes/lovexstudio/src/postcss/blocks/_home-projects.css
+++ b/wp-content/themes/lovexstudio/src/postcss/blocks/_home-projects.css
@@ -1,5 +1,4 @@
 .section-home-projects {
-	margin-top: 30px;
 	& .section__container {
 		width: min(100% - 70px, 1240px);
 		margin: 0 auto;
@@ -12,7 +11,7 @@
 	}
 
 	& .section__footer {
-		margin-top: 30px;
+		margin: 30px 0 15px;
 		& .section__inner-container {
 			display: flex;
 			justify-content: center;
@@ -38,6 +37,7 @@
 
 @media (min-width: 768px) {
 	.section-home-projects {
+		margin-top: 30px;
 		padding-bottom: 30px;
 
 		& .project-grid {
